2005-04-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/alert_dialog.rb:

	Make the labels selectable.

	* lib/alexandria/library.rb:

	The class is now obversable, and sends notifications when books are
	added, updated or removed from the library.

	* lib/alexandria/ui/completion_models.rb,
	  lib/alexandria/ui/main_app.rb:

	Observes the libraries and update the models accordingly.

2005-04-01  Laurent Sansonetti  <lrz@gnome.org>

	Introduced completion in the manual add book and book properties dialogs.
	The design is not yet finished, and is susceptible to change.

	* lib/alexandria/ui/completion_models.rb:

	Added.

	* lib/alexandria/ui.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/main_app.rb:

	- Follow latest change ;
	- Tweaked the model loading code to make it faster ;
	- Auto-resize the books list view columns.

=== Alexandria 0.5.1 ===

2005-03-27  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS,
	  README:

	Updated for 0.5.1.

	* tests/test_provider.rb:

	Added a test for the Amadeus Buch provider.

2005-03-26  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Documentation is done!

	* AUTHORS,
	  lib/alexandria.rb:

	Added Liam.

2005-03-25  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:

	- Use alternating colours for rows in the providers list ;
	- Make the dialog resizable.
	
	* lib/alexandria/library.rb:

	Preserves backward compatibility when saving a book by resetting the
	saved_ident property if it does not exist.

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/ui/export_dialog.rb:

	Say "already exists" rather than "is already existing".

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* data/alexandria/glade/preferences_dialog.glade:

	Rename the "List Columns" tab to "List View".

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* data/alexandria/glade/new_book_dialog.glade:
